# PCB-BVH

./: .gitignore  CMakeLists.txt  README.md
cmake/: Install.cmake
src/bvh/v2/: CMakeLists.txt  bbox.h  bvh.h  default_builder.h  mini_tree_builder.h  node.h  pcb_data.h  sweep_sah_builder.h  top_down_sah_builder.h  tri.h  vec.h
test/: CMakeLists.txt  benchmark.cpp  pcb_test.cpp  serialize.cpp  simple_example.cpp
test/pcb_data/: data1.txt  data3.txt  data4.txt  data6.txt  data7.txt
